@@ -1571,12 +1571,12 @@ typedef struct {
 
   char *VirtualAddrNetwork; /**< Address and mask to hand out for virtual
                              * MAPADDRESS requests. */
-  int SearchDomains; /**< Boolean: If set, we don't force exit addresses to
-                      * be FQDNs, but rather search for them in the local
-                      * domains. */
-  char *ResolvConf; /**< If provided, we configure our internal resolver from
-                     * the file here rather than from /etc/resolv.conf (unix)
-                     * or the registry (windows) */
+  int ServerDNSSearchDomains; /**< Boolean: If set, we don't force exit
+                      * addresses to be FQDNs, but rather search for them in
+                      * the local domains. */
+  char *ServerDNSResolvConfFile; /**< If provided, we configure our internal
+                     * resolver from the file here rather than from
+                     * /etc/resolv.conf (unix) or the registry (windows) */
 } or_options_t;
 
 /** Persistent state for an onion router, as saved to disk. */
